--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Linux Kernel
-lang: en
-description:
+title: jekyll-rtd-theme
+description: Just another documentation theme compatible with GitHub Pages
 
-theme: jekyll-rtd-theme
+theme: null
 
-debug:
-  compress: false
-  dist: true
-  shortcodes: true
+# debug:
+#   compress: true
+#   dist: false
+#   shortcodes: true
 
 readme_index:
   with_frontmatter: true
